--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ DateTime
 python-dateutil
  numpy
  threadpoolctl>=2.0.0
- scikit-learn>=0.20.0
+ scikit-learn==0.20.0
  seaborn
   matplotlib
   pandas
