--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,7 @@ pyspark
 DateTime
 python-dateutil
  numpy
- threadpoolctl>=2.0.0
- scikit-learn==0.20.0
+ scikit-learn
  seaborn
   matplotlib
   pandas
